@@ -3,6 +3,8 @@ Version: 1.0.4
 Date: 2021.08.07
   Bugfixes:
     - Fix crash on mining AWESOME Sink (#79)
+  Optimizations:
+    - Added event filter to ignore ghost entities, massively increasing performance of blueprinting
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2021.08.06
